Fix compilation error in harfbuzz 1.7.6 for Solaris Developer Studio 12.6

XMLWordPrintable

    • 2d
    • 11
    • b19
    • solaris

        The upgrade to harfbuzz 1.7.6 included a workaround from
        upstream for the __restrict keyword not being
        supported in SunStudio 12.4.

        Support for the __restrict keyword was added to CC in 12.5

        A version-based test is one way to fix this.s
        This is how you can test for __restrict being keyword rather than a predefined macro (which it was in gcc compatibility mode like -std=c++NN or -compat=g):
        #if defined(__SUNPRO_CC) && (__SUNPRO_CC) >= 0x5140
        // restrict supported
        #else
        // restrict unsupported
        #endif

              Assignee:
              Philip Race
              Reporter:
              Philip Race
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: