8204509: Fix compilation error in harfbuzz 1.7.6 for Solaris Developer Studio 12.6

Reviewed-by: serb